--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq sshpass
   - gem install package_cloud
-  - .travis/check_sftp.sh 
+  - sudo .travis/check_sftp.sh 
 
 env:
   global:
