--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ services:
   - docker
 
 before_install:
+  - chmod +x .travis/check_sftp.sh 
   - sudo apt-get update -qq
   - sudo apt-get install -qq sshpass
   - gem install package_cloud
