--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,13 @@ before_install:
   - chmod +x .travis/send_binaries.sh
   - chmod +x .travis/upload_packagecloud.sh
   - chmod +x .travis/send_status.sh
+  - chmod +x .travis/build_deb.sh
+  - chmod +x .travis/build_rip.sh
+  - chmod +x .travis/build_rip_helper.sh
+  - chmod +x .travis/get_ccache.sh
+  - chmod +x .travis/save_ccache.sh
+  - chmod +x .travis/mk_runtests/run_tests.sh
+  - chmod +x .travis/mk_runtests/run_tests_helper.sh
   - sudo apt-get update -qq
   - sudo apt-get install -qq sshpass
   - gem install package_cloud
