--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,19 @@ services:
   - docker
 
 before_install:
-  - chmod -R 777 *
+  - chmod +x .travis/build_deb
+  - chmod +x .travis/build_rip
+  - chmod +x .travis/build_rip_helper
+  - chmod +x .travis/check_sftp
+  - chmod +x .travis/docker_run
+  - chmod +x .travis/get_ccache
+  - chmod +x .travis/save_ccache
+  - chmod +x .travis/send_binaries
+  - chmod +x .travis/send_status
+  - chmod +x .travis/upload_packagecloud
+  - chmod +x /debian/configure
+  - chmod +x /src/autogen.sh
+
   - sudo apt-get update -qq
   - sudo apt-get install -qq sshpass
   - gem install package_cloud
